chore: update index.html to version v1.0.21

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         <div class="section">
             <h2>📚 Available Charts</h2>
             <ul>
-                <li><strong>dashwright</strong> <span class="badge">vv1.0.21</span> - Complete Dashwright stack (Backend + Frontend)</li>
+                <li><strong>dashwright</strong> <span class="badge">vvv1.0.21</span> - Complete Dashwright stack (Backend + Frontend)</li>
             </ul>
         </div>
         
